Fix header visibility and page links

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -78,3 +78,7 @@ a.middle-indicator-text {
   background: none;
   border-radius: 50px;
 }
+
+div.navbar-fixed {
+  z-index: unset;
+}
